# NoteMap

./: .gitignore  CLAUDE.md  README.md  ingestion.ipynb  package-lock.json  package.json  pyproject.toml
notemap/: cache.py  models.py
notemap.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notemap/clustering/: nodes.py  umap.py
notemap/embed/: chunking.py  dim_utils.py  embed.py
notemap/embeddings/: chunking.py  embed.py
notemap/graph/: index.html  layout.json  package-lock.json  package.json  style.css  vite.config.ts
notemap/graph/src/: graph.ts
notemap/ingest/: pdf.py
